--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.10",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
+        "postcss-nesting": "^13.0.2",
         "tailwindcss": "^4.1.5",
         "vite": "^6.0.11"
     },
